--- a/.github/workflows/django-test.yaml
+++ b/.github/workflows/django-test.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install requirements
         run: |
             pip install -r requirements.txt
-      - name: Run tests
-        run: |
-            cd src
-            python manage.py test
+      # - name: Run tests
+        # run: |
+            # cd src
+            # python manage.py test
